@@ -1,3 +1,9 @@
+2011-09-29  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/color.c src/graph3d.c src/graphics.c:  User-specified axis tick
+	labels should override auto-generated tick labels in 3D plots just as
+	they already do in 2D plots.
+
 2011-09-27  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/emf.trm term/fig.trm term/metapost.trm term/tgif.trm:
